# vtrack

./: .gitignore  LICENSE  README.md  config.yaml  main.py  main_cli.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  counter.py  detection.py  tracking.py
src/utils/: __init__.py  video.py
